--- a/Austin Hooks Code.html
+++ b/Austin Hooks Code.html
@@ -1,3 +1,49 @@
-<h1>Austin Hooks</h1>
+<header>This document contains lots of nonsense 🙃</header>
+<h1>Austin M. Hooks</h1>
 <h2>Skills: Background, Methods, Design</h2>
 <p>Austin Hooks is a Ph.D. student in Texts and Technology with a focus in the digital humanities at the University of Central Florida. His research interests are in digital media and social media, specifically the social ramifications of digital media technologies and digital archivization, the moral and ethical implications of social media usage, and the overall degree to which mass communications and the spreadability of media limits, expands, or otherwise shapes the meta-narratives that inform our world views. He earned both his MA and BA in rhetoric and writing at the University of Tennessee at Chattanooga in 2020 and 2018, respectively. His research methods tend towards observational research to interview based research to experimental design research, and his related skills are grounded in digital design, magazining editing and design, teaching, writing, and a plethora of other focuses in the digital humanities. </p>
+<footer>This was created by Austin M. Hooks</footer>
+<p>Table of Contents:</p>
+        <ol>
+          <li>
+            <a href="https://scholar.utc.edu/cgi/viewcontent.cgi?article=1835&context=theses">Thesis</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/austin-m-hooks-m-a-849195b1/">LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://austinmhooks.wixsite.com/website">Personal Webpage</a>
+          </li>
+        </ol>
+    </header>
+    <div id="headingsAndParagraphs">
+        <a href="https://www.youtube.com/watch?v=QH2-TGUlwu4&list=PLpoYz7tii_gj5EA1RV99A9ZOR4OD5W0LS">(/'.')/ ~=[,,_,,]:3 \('.'\)</a>
+    </p>
+    <p id="secondParagraph" class="paragraph second">
+      <strong>Skills</strong> are as <em>follows</em>.
+    </p>
+  </div>
+  <div id="lists">
+    <ol>
+      <li>Adobe Photoshop</li>
+      <li>Adobe Illustrator</li>
+      <li>Adobe InDesign</li>
+      <li>Adobe Aftereffects</li>
+      <li>Adobe Premiere</li>
+    </ol>
+    <ul>
+      <li><html>
+        <head>
+          <title>Resume</title>
+        </head>
+        <body>
+          <h1>Resume</h1>
+          <p>Open File <a href="file:///Users/austinhooks/Downloads/Hooks%20Resume%20(1).pdf">Resume</a>.</p>
+        </body>
+      </html></li>
+    </ul>
+  </div>
+  <div id="links"><p>
+      <body style="background-color:rgb(120, 217, 247);"></body>
+      <img SRC="DumpterFire.gif">
+      
